[tool.poetry]
name = "ko-solar-10-7b"
version = "0.1.0"
description = ""
authors = ["merry555 <rlawltn9408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
pandas = "2.0.0"
datasets = "^2.14.5"
scikit-learn = "^1.3.1"
wandb = "^0.15.12"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
chardet = "^5.2.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
langchain = "^0.0.331"
accelerate = "0.27.1"
peft = "0.8.2"
bitsandbytes = "0.42.0"
trl = "0.7.10"
alpaca-eval = "^0.5.4"
optimum = "^1.17.1"
yellowbrick = "^1.5"
sentence-transformers = "^2.5.1"
transformers = "^4.38.2"
packaging = "^24.0"
ninja = "^1.11.1.1"
deepspeed = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
